# epanet-python

./: .coveralls.yml.enc  .gitignore  .gitmodules  MANIFEST.in  README.md  appveyor.yml  before_build.bat  epamodule.py  epamoduleNEW.py  epamodulepy3.py  epanet2.py  epanet2py3.py  example2.py  outbin.py  requirements.txt  setup.py  tester.py  tox.ini
.github/workflows/: build-wheels.yml  ci.yml
epanet-module/: LICENSE  README.md  epamodule.py  example2.py  example3.inp  outbin.py  test_outbin.py
epanet-toolkit/: setup.py
epanet-toolkit/src/: epanet_toolkit.i
epanet_python/: appveyor.yml  before_build.bat  setup.cfg  setup.py  tox.ini
epanet_python/epanet_python/output/: setup.py
epanet_python/epanet_python/output/epanet/output/: __init__.py  output.i
epanet_python/epanet_python/output/tests/: test_output.py
epanet_python/epanet_python/toolkit/epanet/toolkit/: __init__.py  toolkit.i
epanet_python/epanet_python/toolkit/tests/data/: test_warnings.inp
epanet_python/output/: setup.py
epanet_python/output/tests/: test_output.py
epanet_python/toolkit/: buildnotes.md  setup.py
epanet_python/toolkit/epanet/toolkit/: toolkit.i
epanet_python/toolkit/tests/: test_toolkit.py
output/: setup.py
output/epanet/output/: __init__.py  output.i
output/tests/: test_output.py
owa-epanet/: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_owa-epanet.bat  setup.py
owa-epanet/scripts/: clean.sh
owa-epanet/test/: README.md  __init__.py  test-lib.py  test_owa_epanet.py
owa-epanet/test/data/: __init__.py  example_1.inp
owa-epanet/wrapper/: output.i  toolkit.i
toolkit/: buildnotes.md  setup.py
toolkit/epanet/toolkit/: toolkit.i
toolkit/tests/: test_toolkit.py
toolkit/tests/data/: __init__.py
